--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -12,26 +12,37 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [18.x]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      # Step 2: Setup Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Install dependencies
-      run: cd pdf-app && npm ci
-      working-directory: pdf-app
+      # Step 3: Install dependencies (inside pdf-app)
+      - name: Install dependencies
+        working-directory: pdf-app
+        run: npm install
 
-    - name: Build app
-      run: npm run build --if-present
-      working-directory: pdf-app
+      # Step 4: Run tests (optional, only if you have tests)
+      - name: Run tests
+        working-directory: pdf-app
+        run: npm test -- --watchAll=false
 
-    - name: Run tests
-      run: npm test --if-present
-      working-directory: pdf-app
+      # Step 5: Build the React app
+      - name: Build app
+        working-directory: pdf-app
+        run: npm run build
+
+      # Step 6: Optionally upload build artifacts
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: pdf-app-build
+          path: pdf-app/build
