--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,30 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Run tests
-      run: npm test
-      
     - name: Build application
       run: npm run build
+
+    - name: Upload production build to GitHub Pages
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./pdf-app/build
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write      # Allow the deploy action to create deployments
+      id-token: write   # Allow the deploy action to create a JWT
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+
+
+This new file adds a few key steps. First, it uploads your `build` directory as an artifact. Then, it uses the `deploy-pages` action in a separate job to take that artifact and publish it to GitHub Pages.
+
+To make this work, you'll also need to enable GitHub Pages in your repository settings under the "Pages" section and set the source to "GitHub Actions".
